<resources>
    <string name="app_name">Study</string>
    <string name="copy">COPY</string>
    <string name="add">THÊM</string>
    <string name="remove">XOÁ</string>
    <string name="lb_title">Tiêu đề: %d</string>
    <string name="lb_description">Chi tiết: %d</string>
    <string name="lb_content">Nội dung %d</string>
    <string name="detail">Chi tiết</string>
    <string name="first_item">First Item</string>
    <string name="second_item">Second Item</string>
    <string name="fourth_item">Fourth Item</string>
    <string name="third_item">Third_Item</string>
    <string name="sub_item">Sub Item</string>
    <string name="change_language">ĐỔI NGÔN NGỮ</string>
</resources>
