<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/first_item"
        android:actionLayout="@layout/activity_content"
        android:alphabeticShortcut="@string/first_item"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_reward_coin_item_list"
        android:menuCategory="system"
        android:title="@string/first_item"
        app:showAsAction="withText" />

    <item
        android:id="@+id/second_item"
        android:actionLayout="@layout/activity_content"
        android:alphabeticShortcut="@string/first_item"
        android:checkable="false"
        android:icon="@drawable/ic_reward_coin_item_list"
        android:title="@string/second_item"
        app:showAsAction="withText">
        <menu>
            <item
                android:id="@+id/submenu_item1"
                android:checkable="true"
                android:checked="true"
                android:title="@string/sub_item" />
        </menu>
    </item>


    <group
        android:id="@+id/first_group"
        android:checkableBehavior="all"
        android:visible="true">
        <item
            android:id="@+id/third_item"
            android:actionLayout="@layout/activity_content"
            android:alphabeticShortcut="@string/first_item"
            android:checkable="false"
            android:checked="true"
            android:icon="@drawable/ic_reward_coin_item_list"
            android:menuCategory="system"
            android:title="@string/third_item"
            app:showAsAction="withText" />

        <item
            android:id="@+id/fourth_item"
            android:actionLayout="@layout/activity_content"
            android:alphabeticShortcut="@string/first_item"
            android:checkable="false"
            android:icon="@drawable/ic_reward_coin_item_list"
            android:title="@string/fourth_item"
            app:showAsAction="withText" />
    </group>


</menu>